--- a/build.gradle
+++ b/build.gradle
@@ -99,8 +99,10 @@ subprojects {
 		compile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1"
 		compile "org.apache.geronimo.specs:geronimo-j2ee-connector_1.5_spec:2.0.0"
 		compile "org.apache.activemq:activemq-all:5.5.0"
+		compile "org.apache.hadoop:hadoop-core:1.1.3.4"
 		
 		compile "com.alibaba:fastjson:1.2.9"
+		compile "org.apache.zookeeper:zookeeper:3.4.6"
 		
 		testCompile "org.springframework:spring-test:${springVersion}"
 		testCompile "org.jmock:jmock-junit4:2.6.0"
