--- a/common-test-base/.settings/org.eclipse.jdt.core.prefs
+++ b/common-test-base/.settings/org.eclipse.jdt.core.prefs
@@ -1,17 +1,16 @@
 #
-<<<<<<< HEAD
-#Fri Jun 17 15:56:28 CST 2016
-=======
-#Mon May 16 11:12:07 CST 2016
->>>>>>> branch 'master' of https://github.com/yinhaomin/common-test.git
+#Wed Jun 22 11:50:43 CST 2016
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
+>>>>>>>=branch 'master' of https\://github.com/yinhaomin/common-test.git
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
+<<<<<<<=HEAD
 org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.debug.lineNumber=generate
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.debug.lineNumber=generate
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.source=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+=\=\=\=\=\=\=
