--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = "common-test"
 include "common-test-base"
 include "common-test-biz"
 include "common-test-service"
+include "common-test-web"
