--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,23 @@ ext {
 	slf4jVersion = "1.7.10"
 }
 
+buildscript {
+    repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        mavenLocal()
+    }
+    dependencies {
+        classpath "net.saliman:gradle-cobertura-plugin:1.1.1"
+    }
+}
+
+configurations.all {
+    resolutionStrategy {
+        cacheDynamicVersionsFor 10, 'seconds'
+        cacheChangingModulesFor 0, 'seconds'
+    }
+}
+	
 subprojects {
 	apply plugin: 'eclipse'
 	apply plugin: 'java'
@@ -30,21 +47,14 @@ subprojects {
 	targetCompatibility = 1.6
 	version = '1.0'
 	
-	buildscript {
 		repositories {
-
+                     maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+                     mavenLocal()
 		}
-		configurations.all {
-			resolutionStrategy {
-				cacheDynamicVersionsFor 10, 'seconds'
-				cacheChangingModulesFor 0, 'seconds'
-			}
-		}
-	}
 	
 	dependencies {		
 		compile "org.projectlombok:lombok:1.12.2"
-		compile "mcpack-j:mcpack-j:1.0.FCSUN.TRAIN"
+		//compile "mcpack-j:mcpack-j:1.0.FCSUN.TRAIN"
 		compile "org.springframework:spring-core:${springVersion}"
 		compile "org.springframework:spring-beans:${springVersion}"
 		compile "org.springframework:spring-context:${springVersion}"
@@ -96,7 +106,7 @@ subprojects {
 		compile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1"
 		compile "org.apache.geronimo.specs:geronimo-j2ee-connector_1.5_spec:2.0.0"
 		compile "org.apache.activemq:activemq-all:5.5.0"
-		compile "org.apache.hadoop:hadoop-core:1.1.3.4"
+		//compile "org.apache.hadoop:hadoop-core:1.1.3.4"
 		
 		compile "com.alibaba:fastjson:1.2.9"
 		compile "org.apache.zookeeper:zookeeper:3.4.6"
