--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://s3.bae.baidu.com/ic-image/gradle-2.5-all.zip
+distributionUrl=https\://downloads.gradle.org/distributions/gradle-2.5-all.zip
